<resources>
    <string name="app_name">AgendaSmart</string>
    <string name="Title">AgendaSmart</string>
    <string name="btnIniciarSesion">Iniciar sesión</string>
    <string name="btnRegistrar">Registrarse</string>
    <string name="Registro">Registro</string>
    <string name="Nombre">Nombre</string>
    <string name="Email">Correo electrónico</string>
    <string name="Password">Contraseña</string>
    <string name="ConfirmPassword">Confirmar contraseña</string>
    <string name="cancelar">Cancelar</string>
    <string name="yaTengoCuenta">Ya tengo una</string>
    <string name="cuenta">Cuenta</string>

    <string name="Hola">Hola!</string>
    <string name="NombreUsuario">Nombre de usuario</string>
    <string name="CorreoUsuario">Correo electronico</string>
    <string name="verificar">Verificar</string>
    <string name="Bienvenido">Bienvenido</string>
    <string name="TareasContactos">Tareas y contactos</string>

    <string name="AgregarTarea">Agregar tarea</string>
    <string name="Mistareas">Mis tareas</string>
    <string name="Importantes">Importantes</string>
    <string name="Contactos">Contactos</string>

    <string name="desarrollado">Desarrollado por:</string>
    <string name="version">Version: 1.0</string>
    <string name="Soporte">Soporte: innosoft@gmail.com</string>
    <string name="entendido">Entendido</string>

    <string name="ActualizarPerfil">Actualizar perfil</string>
    <string name="PerfilUsuario">Perfil de usuario</string>
    <string name="MisNombres">Mis nombres</string>
    <string name="MisApellidos">Mis apellidos</string>
    <string name="edad">Mi edad</string>
    <string name="Domicilio">Domicilio</string>
    <string name="Telefono">Telefono</string>
    <string name="profesion">Profesión</string>

    <string name="FechaCreacion">Fecha de creación</string>
    <string name="fecha">Fecha</string>
    <string name="Descripcion">Descripción</string>
    <string name="Titulo">Titulo</string>
    <string name="fechalimite">Fecha limite</string>
    <string name="formato">DD/MM/YYYY</string>
    <string name="nofinalizada">No finalizada</string>

    <string name="itenid">Id Tarea</string>
    <string name="uidUsuario">Id Usuario</string>
    <string name="FechaCreacioniten">Fecha de creación</string>
    <string name="fechaiten">Fecha</string>
    <string name="Descripcioniten">Descripción</string>
    <string name="Tituloiten">Titulo</string>
    <string name="fechalimiteiten">Fecha limite</string>
    <string name="formatoiten">DD/MM/YYYY</string>
    <string name="nofinalizadaiten">No finalizada</string>

    <string name="nuevatarea">Nueva tarea</string>
    <string name="mistareas">Mis tareas</string>
    <string name="tareasImportantes">Tareas importantes</string>

    <string name="Eliminarcuenta">Eliminar cuenta</string>
    <string name="detallesTarea">Detalles de la tarea</string>

    <string name="tituloDetalle">Titulo:</string>
    <string name="descripcionDetalle">Descripción:</string>
    <string name="fechaDetalle">Fecha de registro:</string>
    <string name="fechaLimiteDetalle">Fecha limite:</string>
    <string name="estadoDetalle">Estado:</string>

    <string name="SettituloDetalle">Titulo</string>
    <string name="SetdescripcionDetalle">Descripción</string>
    <string name="SetfechaDetalle">Fecha de registro</string>
    <string name="SetfechaLimiteDetalle">Fecha limite</string>
    <string name="SetestadoDetalle">Estado</string>

    <string name="noImportante">No importante</string>
    <string name="cambiarContraseña">Cambiar contraseña</string>
    <string name="actualizarContraseña">Actualizar contraseña</string>
    <string name="contraseñaActual">Contraseña actual</string>
    <string name="contraseñaNueva">Contraseña nueva</string>
    <string name="confirmarContraseña">Confirmar contraseña</string>

    <string name="Establecer_Telefono">Escriba su telefono</string>
    <string name="btn_Aceptar_Telefono">Aceptar</string>

    <string name="ElegirImagen">Elegir imagen desde</string>
    <string name="ElegirImagenGaleria">Desde galeria</string>
    <string name="ElegirImagenCamara">Desde camara</string>
    <string name="ElegirImagenOpcion">Elegir imagen</string>
    <string name="actualizarImagen">Actualizar imagen</string>

    <string name="idContacto">Id Contacto</string>
    <string name="UidUsuario">Id Usuario</string>
    <string name="NombreContacto">Nombres</string>
    <string name="ApellidoContacto">Apellidos</string>
    <string name="TelefonoContacto">Telefono</string>
    <string name="CorreoContacto">Correo</string>
    <string name="EdadContacto">Edad</string>
    <string name="DireccionContacto">Dirección</string>

    <string name="idContactoActualizar">Id Contacto</string>
    <string name="UidUsuarioActualizar">Id Usuario</string>
    <string name="NombreContactoActualizar">Nombres</string>
    <string name="ApellidoContactoActualizar">Apellidos</string>
    <string name="TelefonoContactoActualizar">Telefono</string>
    <string name="CorreoContactoActualizar">Correo</string>
    <string name="EdadContactoActualizar">Edad</string>
    <string name="DireccionContactoActualizar">Dirección</string>

    <string name="ImportanteTXT">Lee con atención</string>
    <string name="MensajeTXT_Aut">Para realizar la eliminacion de su cuenta, tendrá que cerrar sesión, luego logearse, y en un plazo de 5 minutos podra eliminar su cuenta de nuestra aplicación, una vez pasado ese tiempo , tendrá que realizar nuevamente los pasos mencionados.</string>
    <string name="btn_Entendido_Aut">Entendido</string>
    <string name="btn_Cerrar_Sesion_Aut">Cerrar sesión</string>

    <string name="Opcion">Elija una opción</string>
    <string name="Eliminar">Eliminar</string>
    <string name="ActualizarT">Actualizar</string>


    <string name="itenid_A">Tarea</string>
    <string name="uidUsuario_A">Id Usuario</string>
    <string name="Fecha_A">Fecha</string>
    <string name="fechaiten_A">Fecha</string>
    <string name="Descripcioniten_A">Descripción</string>
    <string name="Tituloiten_A">Titulo</string>
    <string name="fechalimiteiten_A">Fecha</string>
    <string name="formatoiten_A">DD/MM/YYYY</string>
    <string name="nofinalizadaiten_A">No finalizada</string>
    <string name="estadoNuevo">Estado:</string>

    <string-array name="Estados_tarea">
        <item>"No finalizada"</item>
        <item>"Finalizada"</item>
    </string-array>

    <string name="actualizarTarea">Actualizar tarea</string>

    <!--Eliminar tarea importante-->
    <string name="EliminarTareaImportanteTXT">¿Desea eliminar ésta nota importante de la lista?</string>
    <string name="EliminarTarea">Eliminar</string>
    <string name="EliminarTareaCancelar">Cancelar</string>

    <!--Eliminar tarea importante-->
    <string name="FiltroTXT">Filtrar por</string>
    <string name="Todas_Tareas">Todas las tareas</string>
    <string name="Tareas_Finalizadas">Tareas finalizadas</string>
    <string name="Tareas_No_Finalizadas">No finalizadas</string>

    <string name="MisContactos">Mis contactos</string>
    <string name="AgregarContacto">Agregar contacto</string>
    <string name="nombreContacto">Nombres</string>
    <string name="apellidoContacto">Apellidos</string>
    <string name="telefonoContacto">Telefono</string>
    <string name="correoContacto">Correo</string>
    <string name="edadContacto">Edad</string>
    <string name="guardarContacto">Guardar contacto</string>
    <string name="direccionContacto">Dirección</string>

    <string name="idContactosDetaDetalles">id:</string>
    <string name="UidUsuarioDetalle">Id Usuario:</string>
    <string name="uidContactosDetaDetalles">Uid usuario:</string>
    <string name="nombreContactoDetalles">Nombres:</string>
    <string name="apellidoContactoDetalles">Apellidos:</string>
    <string name="telefonoContactoDetalles">Telefono:</string>
    <string name="correoContactoDetalles">Correo:</string>
    <string name="edadContactoDetalles">Edad:</string>
    <string name="direccionContactoDetalles">Dirección:</string>
    <string name="detalleContacto">Detalles del contacto</string>
    <string name="formatoTelefono">0000-0000</string>
    <string name="llamarContacto">Llamar</string>
    <string name="enviarMensajeContacto">Mensaje</string>
    <string name="actualizarContacto">Actualizar contacto</string>

    <string name="Advertencia">Por favor complete al menos el campo Nombre del contacto</string>

    <!--ACTUALIZAR CONTACTOS-->
    <string name="Id_C_A"> -- </string>
    <string name="uid_C_A"> -- </string>
    <string name="Nombres_C_A"> -- </string>
    <string name="Apellido_C_A"> -- </string>
    <string name="Correo_C_A"> -- </string>
    <string name="Telefono_C_A"> -- </string>
    <string name="Edad_C_A"> -- </string>
    <string name="Direccion_C_A"> -- </string>
    <string name="Btn_Actualizar_C_A"> Actualizar contacto</string>


    <string name="CuentaVerificadaTXT">Cuenta verificada</string>
    <string name="EntendidoVerificado">Entendido</string>

    <string name="info">Tocar para ver detalles de la tarea</string>
    <string name="infoContacto">Tocar para ver detalles del contacto</string>
    <string name="infoPresionadoTarea">Mantener presionado para actualizar o eliminar tarea</string>
    <string name="infoPresionadoContacto">Mantener presionado para actualizar o eliminar contacto</string>

</resources>