<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:layout_gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:fontFamily="@font/museomoderno"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:text="@string/FiltroTXT"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/Todas_Tareas"
        android:text="@string/Todas_Tareas"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/museomoderno"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        />

    <Button
        android:id="@+id/Tareas_Finalizadas"
        android:text="@string/Tareas_Finalizadas"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/museomoderno"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        />

    <Button
        android:id="@+id/Tareas_No_Finalizadas"
        android:text="@string/Tareas_No_Finalizadas"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/museomoderno"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        />


</androidx.appcompat.widget.LinearLayoutCompat>