<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.DetalleTareaActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/spindle"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="6"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/btnBack"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/Title"
                    android:scaleType="centerInside"
                    android:src="@drawable/salir" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/museomoderno_semibold"
                    android:text="@string/detallesTarea"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@drawable/vector_actualizar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        android:layout_below="@+id/linearLayout">
    </View>

    <LinearLayout
        android:layout_below="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="30dp"
        android:paddingVertical="30dp"
        android:gravity="center">

        <ImageView
            android:layout_width="90dp"
            android:contentDescription="@string/fecha"
            android:layout_height="90dp"
            android:src="@drawable/tarea"/>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:background="@drawable/stroke_btm"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">
                <TextView
                    android:layout_marginTop="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tituloDetalle"
                    android:fontFamily="@font/museomoderno_semibold"
                    android:textSize="16sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_marginTop="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/descripcionDetalle"
                    android:fontFamily="@font/museomoderno_semibold"
                    android:textSize="16sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_marginTop="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fechaDetalle"
                    android:fontFamily="@font/museomoderno_semibold"
                    android:textSize="16sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_marginTop="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fechaLimiteDetalle"
                    android:fontFamily="@font/museomoderno_semibold"
                    android:textSize="16sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_marginTop="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/estadoDetalle"
                    android:fontFamily="@font/museomoderno_semibold"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginBottom="30dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">
                <TextView
                    android:layout_marginTop="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/SettituloDetalle"
                    android:fontFamily="@font/museomoderno_semibold"
                    android:textSize="16sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_marginTop="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/SetdescripcionDetalle"
                    android:fontFamily="@font/museomoderno_semibold"
                    android:textSize="16sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_marginTop="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/SetfechaDetalle"
                    android:fontFamily="@font/museomoderno_semibold"
                    android:textSize="16sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_marginTop="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/SetfechaLimiteDetalle"
                    android:fontFamily="@font/museomoderno_semibold"
                    android:textSize="16sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_marginTop="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/SetestadoDetalle"
                    android:fontFamily="@font/museomoderno_semibold"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginBottom="30dp"/>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:layout_width="239dp"
            android:layout_height="50dp"
            android:background="@drawable/btn_inicio"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:drawableStart="@drawable/favorito_btn"
            android:text="@string/noImportante"
            android:textAllCaps="false"
            android:fontFamily="@font/museomoderno_semibold"
            android:paddingHorizontal="30dp"/>
    </LinearLayout>

</RelativeLayout>