<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="300dp"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_gravity="center"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Advertencia"
        android:textAlignment="center"
        android:fontFamily="@font/museomoderno_semibold"
        android:textSize="18sp"
        android:textColor="@color/black" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:contentDescription="@string/Title"
        android:src="@drawable/advertencia"/>

    <Button
        android:id="@+id/btn_entendido"
        android:layout_marginTop="15dp"
        android:layout_width="200dp"
        android:layout_height="46dp"
        android:background="@drawable/btn_inicio"
        android:text="@string/entendido"
        android:textAllCaps="false"
        android:fontFamily="@font/museomoderno_semibold"/>

</androidx.appcompat.widget.LinearLayoutCompat>