<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    android:padding="0.2dp"
    app:cardCornerRadius="20dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/stroke_btm"
        android:orientation="vertical"
        android:padding="10dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/btn_inicio">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:src="@drawable/image"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="10dp">

            <TextView
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/idContacto"
                android:fontFamily="@font/museomoderno_semibold"
                android:textSize="14sp"
                android:textColor="@color/black"/>

            <TextView
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/UidUsuario"
                android:fontFamily="@font/museomoderno_semibold"
                android:textSize="14sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NombreContacto"
                android:fontFamily="@font/museomoderno_semibold"
                android:textSize="24sp"
                android:textColor="@color/black"/>

            <TextView
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ApellidoContacto"
                android:fontFamily="@font/museomoderno_semibold"
                android:textSize="14sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_marginBottom="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CorreoContacto"
                android:fontFamily="@font/museomoderno_semibold"
                android:textSize="14sp"
                android:textColor="@color/black"/>

            <TextView
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TelefonoContacto"
                android:fontFamily="@font/museomoderno_semibold"
                android:textSize="14sp"
                android:textColor="@color/black"/>

            <TextView
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/EdadContacto"
                android:fontFamily="@font/museomoderno_semibold"
                android:textSize="14sp"
                android:textColor="@color/black"/>

        </androidx.appcompat.widget.LinearLayoutCompat>



    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>