<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_gravity="center" >

    <TextView
        android:text="@string/EliminarTareaImportanteTXT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:fontFamily="@font/museomoderno_semibold"
        android:gravity="center"
        android:layout_gravity="center_vertical"/>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="5dp">

        <Button
            android:id="@+id/EliminarTarea"
            android:text="@string/EliminarTarea"
            android:textAllCaps="false"
            android:background="@drawable/btn_option_2"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/museomoderno"

           />

        <Button
            android:textAllCaps="false"
            android:id="@+id/EliminarTareaCancelar"
            android:text="@string/EliminarTareaCancelar"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_inicio"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/museomoderno"

            />

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>
